--- a/slides/apunte.tex
+++ b/slides/apunte.tex
@@ -83,9 +83,9 @@
 
 \chapter*{Prefacio}
 \addcontentsline{toc}{chapter}{Preface}
-Este apunte pretende ofrecer una introducción completa al Procesamiento del Lenguaje Natural (PLN), cubriendo los conceptos esenciales. Nos esforzamos por lograr un equilibrio entre las técnicas tradicionales, como los modelos de lenguaje de N-gramas, Naive Bayes y los modelos ocultos de Markov (HMM), y las modernas redes neuronales profundas, como los vectores de palabras, las redes neuronales recurrentes (RNN) y los transformers.
+Este apunte es el resultado de cinco años de experiencia en la enseñanza del curso de Procesamiento de Lenguaje Natural en la Universidad de Chile. El objetivo de este documento es proporcionar una introducción a esta disciplina, centrándose en las técnicas y conceptos fundamentales. Se ha realizado un esfuerzo por lograr un equilibrio entre las técnicas tradicionales, como los modelos de lenguaje de N-gramas, Naive Bayes y los modelos ocultos de Markov (HMM), y los enfoques modernos basados en redes neuronales profundas, como los vectores de palabras, las redes neuronales recurrentes (RNN), los transformers y los grandes modelos de lenguaje. Sin embargo, es importante mencionar que existen temas relevantes que no se incluyen en este material, como el etiquetado de datos, las gramáticas, las técnicas de parsing, así como discusiones sobre tareas más específicas como el question answering.
 
-El material del curso procede de diversas fuentes. Los temas sobre redes neuronales se basan principalmente en el libro Neural Network Methods for Natural Language Processing de Goldberg. Los temas no relacionados con las redes neuronales, como los modelos probabilísticos del lenguaje, Naive Bayes y HMM, proceden del curso de Michael Collins y del libro de Dan Jurafsky. Además, algunas capítulos se han adaptado de tutoriales en línea y otros cursos, como el curso de Stanford de Manning.
+El contenido de este curso se ha recopilado de diversas fuentes. Los temas relacionados con las redes neuronales se basan principalmente en el libro "Neural Network Methods for Natural Language Processing" de Goldberg. Los temas no relacionados con las redes neuronales, como los modelos probabilísticos del lenguaje, Naive Bayes y HMM, se han tomado del curso de Michael Collins de Columbia y del borrador de la tercera edición del libro de Dan Jurafsky. Además, algunos capítulos se han adaptado de tutoriales en línea y otros cursos, como el curso de Stanford de Christopher Manning. Las imágenes utilizadas se han extraído intencionalmente directamente de sus fuentes correspondientes.
 
 \chapter{Introducción}
 \label{cap:intro}
